Added dummy task data

--- a/index.html
+++ b/index.html
@@ -52,7 +52,17 @@
           </div>
 
           <!-- Tasks -->
-          <div class="con-task"></div>
+          <div class="con-task">
+            <div class="task">
+              <div>
+                <h2 class="title">Do Laundry</h2>
+                <p>Saturday, 2pm</p>
+              </div>
+              <div class="delete pointer" id="delete-icon">
+                <i class="fa-regular fa-trash-can"></i>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Footer -->
