Add datetime picker element

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </div>
 
               <div class="form-control">
-                <input type="text" id="date" placeholder="Date & Time">
+                <input type="datetime-local" id="date" placeholder="Date & Time">
               </div>
 
               <div class="form-control flex flx-spc-btn">
@@ -56,7 +56,7 @@
             <div class="task">
               <div>
                 <h2 class="title">Do Laundry</h2>
-                <p>Saturday, 2pm</p>
+                <p>Fri Oct 28 2022</p>
               </div>
               <div class="delete pointer" id="delete-icon">
                 <i class="fa-regular fa-trash-can"></i>
