Add handler to display message when no task

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <header class="header flex flx-spc-btn">
           <h1 class="title">Task Tracker</h1>
 
-          <div class="primary-btn" id="header-btn">
+          <button class="primary-btn" id="header-btn">
             Add
-          </div>
+          </button>
         </header>
 
         <!-- Content -->
